fix: header title being squashed to make it centered
this fix to make it center was making the whole thing squash and some
details were hidden.
Rollback the changes which was trying  to center it, because well it was
not working and made things worst

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -289,11 +289,10 @@
 }
 
 .module-conversation-header__title-container {
-  flex: 1 1 50%;
   min-width: 0;
   display: block;
   text-align: center;
-  max-width: 50%;
+  flex-grow: 1;
 }
 
 .module-conversation-header__title-flex {
